--- a/main.css
+++ b/main.css
@@ -4,10 +4,8 @@ body{
   justify-content: center;
   align-items: center;
   margin-top: 150px;
-  background-color: rgb(244, 197, 66);
-  background-image: url(https://www.w3schools.com/w3css/img_lights.jpg);
+  background-image: url('https://cdn.pixabay.com/photo/2012/11/04/05/49/road-sign-64059_960_720.jpg');
   background-size: cover;
-
 }
 
 h1{
@@ -39,16 +37,26 @@ input {
 .addOption{
   margin-top: 10px;
   color: white;
-  background-color: grey;
+  background-color: black;
   border-radius: 8px;
 }
 
-.doit {
+.scramble {
   margin-top: 100px;
   color: white;
-  background-color: grey;
+  background-color: black;
   font-size: 24px;
   padding: 10px 40px;
   border-radius: 8px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+
+.resultSection {
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 35px;
+  color: white;
+
 }
