--- a/main.css
+++ b/main.css
@@ -4,14 +4,15 @@ body{
   justify-content: center;
   align-items: center;
   margin-top: 150px;
-  background-image: url('https://cdn.pixabay.com/photo/2012/11/04/05/49/road-sign-64059_960_720.jpg');
+  background: url('decisions-and-impulsivity.jpg');
   background-size: cover;
 }
 
 h1{
-  font-family: "Lucida Console", monospace;
-  font-weight: lighter;
-  font-size: 40px;
+  /*font-family: "Lucida Console", monospace;*/
+  font-family: "Bookman", monospace;
+  font-weight: bold;
+  font-size: 60px;
   color: white;
   letter-spacing: 2px;
   margin-bottom: 20px;
@@ -22,6 +23,12 @@ h1{
   margin: 50px 0px;
   width: 400px;
 }
+::placeholder {
+  color: white;
+  opacity: 0.75;
+  font-weight: lighter;
+  font-size: 20px;
+}
 
 .inputs {
   width: inherit;
@@ -31,17 +38,57 @@ h1{
 
 input {
   margin-top: 10px;
-  height: 20px;
+  height: 40px;
+  background-color: transparent;
+  border-color: #00BCD4;
+  border-style: inset;
+  border-width: 0 0 4px;
+  font-size: 30px;
+  font-weight: bold;
+  font-family: "Bookman", monospace;
+  color: white;
 }
 
-.addOption{
-  margin-top: 10px;
+.addOption {
+  background-color: #00BCD4;
+  width: 40px;
+  margin-top: 20px;
+  height: 40px;
+  border-radius: 50%;
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+  border-bottom-right-radius: 50%;
+  border-bottom-left-radius: 50%;
+  border-width: 2px;
+  border-color: white;
+  font-size: 20px;
   color: white;
-  background-color: black;
-  border-radius: 8px;
+  font-family: arial;
+  text-align: center;
 }
 
 .scramble {
+  position: relative;
+  display: inline-block;
+  padding: 1em 2em;
+  margin-top: 100px;
+  text-decoration: none;
+  background: #00BCD4;
+  color: #00BCD4;
+  box-shadow: inset 0 2px 0 rgba(255,255,255,0.2);
+  border-bottom: solid 2px #118e9e;
+  border-radius: 4px;
+  font-weight: bold;
+  letter-spacing: 2px;
+  text-shadow: -1px -1px rgba(255, 255, 255, 0.44), 1px 1px rgba(0, 0, 0, 0.38);
+}
+
+.scramble:active {
+   border-bottom: solid 2px #00BCD4;
+   box-shadow: none;
+   text-shadow: -1px -1px rgba(255, 255, 255, 0.3), 1px 1px rgba(0, 0, 0, 0.3);
+}
+/*.scramble {
   margin-top: 100px;
   color: white;
   background-color: black;
@@ -50,7 +97,7 @@ input {
   border-radius: 8px;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
-
+*/
 .resultSection {
   height: 300px;
   display: flex;
@@ -58,5 +105,6 @@ input {
   align-items: center;
   font-size: 35px;
   color: white;
-
+  font-family: arial;
+  font-weight: bold;
 }
